--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -6,6 +6,7 @@
     }
     section#login {
         width: 80vw;
+        height: 300px;
     }
     section#login > div#imagem {
         float: left;
@@ -16,6 +17,12 @@
         float: right;
         width: 70%;
     }
+    div#formulario > h1 {
+        font-size: 1.5em;
+    }
+    div#formulario > p {
+        font-size: 1em;
+    }
 }
 @media screen and (min-width:992px) {
     body {
@@ -23,14 +30,22 @@
     }
     section#login {
         width: 950px;
+        height: 360px;
     }
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+    div#formulario > p {
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
